dd is empty to json

--- a/security_message/schemas/messageOperationalEventConfigurationError_v1_0.json
+++ b/security_message/schemas/messageOperationalEventConfigurationError_v1_0.json
@@ -4,6 +4,7 @@
  
     "type": "object",
     "properties": {
+      "IsEmpty": {"boolean": ["false"]},
       "Category": {"enum": ["Triggered"]},
       "Name" : {"enum": ["ConfigurationError"]},
       "EventType": {"enum": ["Operational"]},
