--- a/security_message/schemas/messageEventSecurityFirewallConfiguration_v1_0.json
+++ b/security_message/schemas/messageEventSecurityFirewallConfiguration_v1_0.json
@@ -4,6 +4,7 @@
 
   "type": "object",
   "properties": {
+    "IsEmpty": {"boolean": ["false"]},
     "Category": {"enum": ["Periodic"]},
     "Name" : {"enum": ["FirewallConfiguration"]},
     "EventType": {"enum": ["Security"]},
